# franka_ros

devel/: .catkin
devel/include/franka_example_controllers/: teleop_gripper_paramConfig.h  teleop_paramConfig.h
devel/include/franka_msgs/: SetJointConfigurationRequest.h  SetJointConfigurationResponse.h
devel/lib/franka_control/: franka_combined_control_node  franka_control_node
devel/lib/franka_example_controllers/: interactive_marker.py  move_to_start.py  teleop_gripper_node
devel/lib/franka_gripper/: franka_gripper_node
devel/lib/franka_visualization/: gripper_joint_state_publisher  robot_joint_state_publisher
devel/lib/pkgconfig/: franka_control.pc  franka_description.pc  franka_example_controllers.pc  franka_gazebo.pc  franka_gripper.pc  franka_hw.pc  franka_msgs.pc  franka_visualization.pc  my_franka_controller.pc
devel/lib/python3/dist-packages/franka_example_controllers/cfg/: teleop_gripper_paramConfig.py  teleop_paramConfig.py
devel/share/franka_control/cmake/: franka_controlConfig.cmake
devel/share/franka_description/cmake/: franka_descriptionConfig.cmake
devel/share/franka_example_controllers/cmake/: franka_example_controllers-msg-paths.cmake  franka_example_controllersConfig.cmake
devel/share/franka_gazebo/cmake/: franka_gazeboConfig.cmake
devel/share/franka_gripper/cmake/: franka_gripper-msg-paths.cmake  franka_gripperConfig.cmake
devel/share/franka_hw/cmake/: franka_hwConfig.cmake
devel/share/franka_msgs/cmake/: franka_msgs-msg-extras.cmake  franka_msgs-msg-paths.cmake  franka_msgsConfig.cmake
devel/share/franka_visualization/cmake/: franka_visualizationConfig.cmake
devel/share/gennodejs/ros/franka_gripper/msg/: _index.js
devel/share/gennodejs/ros/franka_msgs/msg/: _index.js
devel/share/gennodejs/ros/franka_msgs/srv/: _index.js
devel/share/my_franka_controller/cmake/: my_franka_controllerConfig.cmake
devel/share/roseus/ros/franka_example_controllers/: manifest.l
devel/share/roseus/ros/franka_gripper/: manifest.l
devel/share/roseus/ros/franka_msgs/: manifest.l
src/my_controller/my_franka_controller/: CMakeLists.txt  README.md  plugin.xml
src/my_controller/my_franka_controller/config/: controllers.yaml
src/my_controller/my_franka_controller/include/my_franka_controller/: my_controller.h
src/my_controller/my_franka_controller/launch/: panda.launch
src/my_controller/my_franka_controller/src/: my_controller.cpp
src/my_controller/my_impedance_controller/: CMakeLists.txt  README.md  gazebo.md  my_impedance_controller_plugin.xml  package.xml  problem.md
src/my_controller/my_impedance_controller/cfg/: compliance_param.cfg  desired_mass_param.cfg  dual_arm_compliance_param.cfg  teleop_gripper_param.cfg  teleop_param.cfg
src/my_controller/my_impedance_controller/config/: my_impedance_controller.yaml
src/my_controller/my_impedance_controller/include/: INCLUDE.md  cartesian_impedance_controller.h  pseudo_inversion.h
src/my_controller/my_impedance_controller/launch/: cartesian_impedance_controller.launch
src/my_controller/my_impedance_controller/src/: Nullspace.md  cartesian_impedance_controller.cpp
