<?xml version="1.0"?>
<package format="2">
  <name>my_impedance_controller</name>
  <version>0.1.0</version>
  <description>
    my_impedance_controller provides a Cartesian impedance control implementation
    for controlling robots with ros_control.
  </description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/my_impedance_controller</url>
  <url type="repository">https://github.com/your_github_account/my_impedance_controller</url>
  <url type="bugtracker">https://github.com/your_github_account/my_impedance_controller/issues</url>
  <author>Your Name</author>

  <!-- Buildtool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <!-- Export dependencies -->
  <build_export_depend>message_runtime</build_export_depend>

  <!-- Runtime dependencies -->
  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <!-- Exec dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/my_impedance_controller_plugin.xml" />
  </export>
</package>
